# water-gateway

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  AUDIT_REPORT.md  CMakeLists.txt  PROJECT_BRIEF.md  PROJECT_RULES.md  README.md  bootstrap-starter.ps1  build_output.txt  build_output10.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output6.txt  build_output8.txt  build_output9.txt  out.txt  partitions.csv  sdkconfig.defaults
.codex/environments/: environment.toml
.github/workflows/: ci.yml
components/api_handlers/: CMakeLists.txt
components/api_handlers/include/api_handlers/: api_handlers.hpp  api_handlers_common.hpp  config_json_codec.hpp
components/api_handlers/src/: api_handlers.cpp  api_handlers_common.cpp  auth_handlers.cpp  config_handlers.cpp  config_json_codec.cpp  meter_handlers.cpp  ota_handlers.cpp  prios_handlers.cpp  radio_handlers.cpp  status_handlers.cpp  system_handlers.cpp
components/app_core/: CMakeLists.txt
components/app_core/include/app_core/: app_core.hpp  radio_rx_wake_model.hpp
components/app_core/src/: app_core.cpp  runtime_tasks.cpp
components/auth_service/: CMakeLists.txt
components/auth_service/src/: auth_service.cpp
components/board_config/: CMakeLists.txt
components/board_config/src/: board_config.cpp
components/common/: CMakeLists.txt
components/config_store/: CMakeLists.txt
components/config_store/src/: config_migration.cpp  config_store.cpp  config_validation.cpp
components/dedup_service/: CMakeLists.txt
components/dedup_service/src/: dedup_service.cpp
components/diagnostics_service/: CMakeLists.txt
components/diagnostics_service/src/: diagnostics_service.cpp
components/event_bus/: CMakeLists.txt
components/event_bus/src/: event_bus.cpp
components/health_monitor/: CMakeLists.txt
components/health_monitor/src/: health_monitor.cpp
components/http_server/: CMakeLists.txt
components/http_server/src/: http_server.cpp
components/mdns_service/: CMakeLists.txt
components/mdns_service/src/: mdns_service.cpp
components/meter_registry/: CMakeLists.txt
components/meter_registry/src/: meter_registry.cpp
components/metrics_service/: CMakeLists.txt
components/metrics_service/src/: metrics_service.cpp
components/mqtt_service/: CMakeLists.txt
components/mqtt_service/src/: mqtt_payloads.cpp  mqtt_publish.cpp  mqtt_service.cpp  mqtt_topics.cpp
components/ntp_service/: CMakeLists.txt
components/ntp_service/src/: ntp_service.cpp
components/ota_manager/: CMakeLists.txt
components/persistent_log_buffer/: CMakeLists.txt
components/protocol_driver/: CMakeLists.txt
components/provisioning_manager/: CMakeLists.txt
components/radio_cc1101/: CMakeLists.txt
components/radio_state_machine/: CMakeLists.txt
components/rf_diagnostics/: CMakeLists.txt
components/storage_service/: CMakeLists.txt
components/support_bundle_service/: CMakeLists.txt
components/telegram_router/: CMakeLists.txt
components/watchdog_service/: CMakeLists.txt
components/web_ui/: README.md
components/wifi_manager/: CMakeLists.txt
components/wmbus_link/: CMakeLists.txt
components/wmbus_minimal_pipeline/: CMakeLists.txt
components/wmbus_prios_rx/: CMakeLists.txt
components/wmbus_prios_rx/include/wmbus_prios_rx/: prios_analyzer.hpp  prios_bringup_session.hpp  prios_capture_driver.hpp  prios_capture_service.hpp  prios_decoder.hpp  prios_export.hpp  prios_fixture.hpp
components/wmbus_prios_rx/src/: prios_analyzer.cpp  prios_bringup_session.cpp  prios_capture_driver.cpp  prios_capture_service.cpp  prios_decoder.cpp  prios_export.cpp
components/wmbus_tmode_rx/: CMakeLists.txt
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CONFIGURATION.md  HARDWARE_BRINGUP.md  LIMITATIONS.md  MQTT_TOPICS.md  OPERATIONS.md  OTA.md  PRIOS_BRINGUP.md  PROVISIONING.md  RELEASE_READINESS.md  REPO_LAYOUT.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  WEB_UI.md  multi_protocol_architecture.md  rf_refactor_target.md  rf_test_strategy.md
main/: CMakeLists.txt  app_main.cpp
tests/: README.md
tests/fixtures/: README.md  sample_frames.json
tests/host/: CMakeLists.txt  build_out.txt  build_output.txt  ctest_out.txt  ctest_results.txt  fw_stat.txt  fw_stdout.txt  fw_tail.txt  fw_wc.txt  host_test_stubs.hpp  ninja_out.txt  test_api_config_json.cpp  test_auth_helpers.cpp  test_auth_login_policy.cpp  test_auth_pbkdf2.cpp  test_auth_rate_limit.cpp  test_config_migration.cpp  test_config_store_status.cpp  test_config_validation.cpp  test_dedup.cpp  test_diagnostics_service.cpp  test_downstream_exact_flow.cpp  test_event_bus.cpp  test_health_logic.cpp  test_meter_registry.cpp  test_metrics_service.cpp  test_mqtt_payloads.cpp  test_ota_manager.cpp  test_prios_capture.cpp  test_prios_decoder.cpp  test_prios_export.cpp  test_prios_fixture_analyzer.cpp  test_prios_framer_readiness.cpp  test_protocol_driver.cpp  test_radio_cc1101.cpp  test_radio_rx_frame_utils.cpp  test_radio_rx_wake_model.cpp  test_radio_scheduler_config.cpp  test_radio_state_machine.cpp  test_rf_diagnostics.cpp  (+8 more)
tests/host/build-codex/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  cmake_install.cmake
tests/host/build-codex/Testing/Temporary/: CTestCostData.txt
tests/host/build-gcc/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  cmake_install.cmake
tests/host/build-gcc/Testing/Temporary/: CTestCostData.txt
tests/host/build-make/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_auth_helpers  test_config_migration  test_config_validation  test_dedup  test_health_logic  test_meter_registry  test_mqtt_payloads  test_ota_manager  test_wmbus_pipeline
tests/host/build-make/Testing/Temporary/: CTestCostData.txt
tests/host/build-mingw/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  cmake_install.cmake
tests/host/build-mingw/Testing/Temporary/: CTestCostData.txt
tests/node/: test_ui_banner.mjs
web/: api.js  app.js  auth.js  dashboard.js  data_views.js  diagnostics.js  index.html  ota.js  page_messages.js  settings.js  styles.css  ui_banner.js  ui_common.js  watchlist.js
(+89 files in other folders)
