idf_component_register(
    SRCS
        "src/api_handlers.cpp"
        "src/api_handlers_common.cpp"
        "src/auth_handlers.cpp"
        "src/config_handlers.cpp"
        "src/meter_handlers.cpp"
        "src/radio_handlers.cpp"
        "src/prios_handlers.cpp"
        "src/ota_handlers.cpp"
        "src/system_handlers.cpp"
        "src/status_handlers.cpp"
    INCLUDE_DIRS "include"
    REQUIRES
        common
        http_server
        auth_service
        config_store
        protocol_driver
        wmbus_prios_rx
        mqtt_service
        diagnostics_service
        metrics_service
        health_monitor
        ota_manager
        provisioning_manager
        radio_state_machine
        meter_registry
        persistent_log_buffer
        support_bundle_service
        json
)
