idf_component_register(
    SRCS
        "src/app_core.cpp"
        "src/runtime_tasks.cpp"
    INCLUDE_DIRS "include"
    REQUIRES
        board_config
        common
        event_bus
        config_store
        storage_service
        wifi_manager
        ntp_service
        mdns_service
        provisioning_manager
        protocol_driver
        radio_cc1101
        radio_state_machine
        wmbus_tmode_rx
        wmbus_link
        wmbus_prios_rx
        dedup_service
        telegram_router
        meter_registry
        mqtt_service
        auth_service
        http_server
        api_handlers
        ota_manager
        diagnostics_service
        metrics_service
        health_monitor
        watchdog_service
        persistent_log_buffer
        support_bundle_service
)
